# auriga-test-assignment0

./: CMakeLists.txt  README.md  cache.c  cache.h  fn_info.c  fn_info.h  ls.c  safe_free.h  utils.h
